--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Alyssa Benipayo | Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,13 +28,16 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2><center>Brief Introduction</center></h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
+						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. My interest in becoming a Full Stack Developer began when I interned at Kaiser Permanente. I had the opportunity to analyze large datasets and automate processes. 
+						</br></br> I am currently involved with Hack for LA as a Junior Developer where I strengthen my skills while creating an impact with the projects completed in the community. I am also a self-learner who is available to work in a team as a Full Stack Developer. </br></br>
+						Feel free to view my recent work below. If you would like to reach out, please click on the contact links.
+						</br></br>
+						Thank you! </p>
+						<!----<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul>-->
 					</section>
 
 				<!-- Two -->
@@ -72,12 +75,13 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
-						<ul class="actions">
+						<!---<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> --->
 					</section>
 
 				<!-- Three -->
+				<!---
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -103,10 +107,10 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> --->
 
-				<!-- Four -->
-				<!--
+				<!---- Four --->
+				<!----
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -445,7 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
