--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 							<h2><center>Brief Introduction</center></h2>
 						</header>
 						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. My interest in becoming a Full Stack Developer began when I interned at Kaiser Permanente. I had the opportunity to analyze large datasets and automate processes. 
-						</br></br> I am currently involved with Hack for LA as a Junior Developer where I strengthen my skills while creating an impact with the projects completed in the community. I am also a self-learner who is available to work in a team as a Full Stack Developer. </br></br>
+						</br></br> I am currently involved with Hack for LA as a Junior Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team as a Full Stack Developer. </br></br>
 						Feel free to view my recent work below. If you would like to reach out, please click on the contact links.
 						</br></br>
 						Thank you! </p>
-						<!----<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>-->
+						<ul class="actions">
+							<li><a href="https://www.linkedin.com/in/alyssabenipayo/" class="button">Visit Me on LinkedIn</a></li>
+						</ul>
 					</section>
 
 				<!-- Two -->
@@ -46,38 +46,38 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Project 1</h3>
+								<p>Coming Soon...</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Grocery Delivery App</h3>
+								<p>Coming Soon...</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Inventory Management App</h3>
+								<p>Coming Soon...</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Chart of Accounts</h3>
+								<p>Coming Soon...</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>COVID-19 App</h3>
+								<p>Coming Soon...</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Fire Safety Deficiencies</h3>
+								<p>Coming Soon....</p>
 							</article>
 						</div>
-						<!---<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul> --->
+						<ul class="actions">
+							<li><a href="https://github.com/alyssabenipayo" class="button">Visit Me on GitHub</a></li>
+						</ul>
 					</section>
 
 				<!-- Three -->
