--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Project 1</h3>
-								<p>Coming Soon...</p>
+								<h3>Get The Most Out of GitHub</h3>
+								<p>Hack for LA project to fix visual issue with HTML5 and SCSS.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Grocery Delivery App</h3>
-								<p>Coming Soon...</p>
+								<h3>Easy Shop App/h3>
+								<p>An Android application for users to order groceries and get them delivered to their doorstep. [Cisco Webex Virtual Hackathon]</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
