--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Easy Shop App/h3>
+								<h3>Easy Shop App</h3>
 								<p>An Android application for users to order groceries and get them delivered to their doorstep. [Cisco Webex Virtual Hackathon]</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
