--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<h2><center>Brief Introduction</center></h2>
 						</header>
 						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. My interest in becoming a Full Stack Developer began when I interned at Kaiser Permanente. I had the opportunity to analyze large datasets and automate processes. 
-						</br></br> I am currently involved with Hack for LA as a Junior Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team as a Full Stack Developer. </br></br>
+						</br></br> I am currently involved with Hack for LA as a Frontend Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team as a Full Stack Developer. </br></br>
 						Feel free to view my recent work below. If you would like to reach out, please click on the contact links.
 						</br></br>
 						Thank you! </p>
