--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<!--<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>-->
-					<h1><strong>My name is Alyssa Benipayo.<br />
-						Welcome to my portfolio!</strong></h1>
+					<!-- <a href="#" class="image avatar"><img src="images/AB-Logo.png"/></a> -->
+					<h1><strong>Hello, my name is Alyssa.<br />
+					Welcome to my portfolio!</h1>
 				</div>
 			</header>
 
@@ -28,13 +28,15 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><center>Brief Introduction</center></h2>
+							<center><h2>About Me</h2></center>
 						</header>
-						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. My interest in becoming a Full Stack Developer began when I interned at Kaiser Permanente. I had the opportunity to analyze large datasets and automate processes. 
-						</br></br> I am currently involved with Hack for LA as a Frontend Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team as a Full Stack Developer. </br></br>
+						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. I am a currently working with Hack for LA as a Front-end Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team.
+						</br>
+						</br>
 						Feel free to view my recent work below. If you would like to reach out, please click on the contact links.
-						</br></br>
-						Thank you! </p>
+						</br>
+						</br>	
+						Thank you!</p>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/alyssabenipayo/" class="button">Visit Me on LinkedIn</a></li>
 						</ul>
@@ -42,46 +44,45 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<center><h2>Recent Work</h2></center>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Get The Most Out of GitHub</h3>
-								<p>Hack for LA project to fix visual issue with HTML5 and SCSS.</p>
+								<a href="images/recent-works/most-of-gh.PNG" class="image fit thumb"><img src="images/recent-works/most-of-gh.PNG" alt="" /></a>
+								<h3><a href="https://www.hackforla.org/guide-pages/github-issues" >Get The Most Out of GitHub</a></h3>
+								<p>Redesign Hack for LA's guide page to resolve visual issues with HTML5, SCSS, and Sass. [<a href="https://github.com/hackforla/website/issues/794">GitHub</a>]</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Easy Shop App</h3>
-								<p>An Android application for users to order groceries and get them delivered to their doorstep. [Cisco Webex Virtual Hackathon]</p>
+								<h3>Ultricies lacinia interdum</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Inventory Management App</h3>
-								<p>Coming Soon...</p>
+								<h3>Tortor metus commodo</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Chart of Accounts</h3>
-								<p>Coming Soon...</p>
+								<h3>Quam neque phasellus</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>COVID-19 App</h3>
-								<p>Coming Soon...</p>
+								<h3>Nunc enim commodo aliquet</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Fire Safety Deficiencies</h3>
-								<p>Coming Soon....</p>
+								<h3>Risus ornare lacinia</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://github.com/alyssabenipayo" class="button">Visit Me on GitHub</a></li>
+							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
-
-				<!-- Three -->
-				<!---
+				
+				<!-- Three 
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -101,16 +102,27 @@
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										1234 Somewhere Rd.<br />
+										Nashville, TN 00000<br />
+										United States
+									</li>
+									<li>
+										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
+										000-000-0000
+									</li>
+									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">alymaebenipayo@gmail.com</a>
+										<a href="mailto:alymaebenipayo@gmail.com">alymaebenipayo@gmail.com</a>
 									</li>
 								</ul>
 							</div>
 						</div>
-					</section> --->
+					</section>
+					-->
 
-				<!---- Four --->
-				<!----
+				<!-- Four -->
+				<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -433,12 +445,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/alyssabenipayo" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alyssabenipayo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:alymaebenipayo@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Alyssa Benipayo</li><!---<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+						<li>&copy; Alyssa Benipayo</li>
 					</ul>
 				</div>
 			</footer>
@@ -449,7 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script> -->
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
