Added more Recent Work. Updated About Me.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/AB-Logo-sm.png"/>
 	</head>
 	<body class="is-preload">
 
@@ -30,7 +31,7 @@
 						<header class="major">
 							<center><h2>About Me</h2></center>
 						</header>
-						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. I am a currently working with Hack for LA as a Front-end Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team.
+						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. I am currently working with Hack for LA as a Front-end Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team.
 						</br>
 						</br>
 						Feel free to view my recent work below. If you would like to reach out, please click on the contact links.
@@ -38,7 +39,7 @@
 						</br>	
 						Thank you!</p>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/alyssabenipayo/" class="button">Visit Me on LinkedIn</a></li>
+							<li><a href="https://drive.google.com/file/d/1yYmwvwKnxyGscF4bcTNj_LIl9q2qZMru/view?usp=sharing" class="button">View Resume Here</a></li>
 						</ul>
 					</section>
 
@@ -48,15 +49,15 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/recent-works/most-of-gh.PNG" class="image fit thumb"><img src="images/recent-works/most-of-gh.PNG" alt="" /></a>
-								<h3><a href="https://www.hackforla.org/guide-pages/github-issues" >Get The Most Out of GitHub</a></h3>
-								<p>Redesign Hack for LA's guide page to resolve visual issues with HTML5, SCSS, and Sass. [<a href="https://github.com/hackforla/website/issues/794">GitHub</a>]</p>
+								<h3><a href="https://www.hackforla.org/guide-pages/github-issues" > Hack for LA | Get The Most Out of GitHub</a></h3>
+								<p>Currently redeveloping Hack for LA's guide page from scratch to resolve visual issues with HTML5, SCSS, and Sass. [<a href="https://github.com/alyssabenipayo/website/blob/gh-pages/_sass/components/guide-pages/github-issue-guide.scss">Source Code</a>]</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/recent-works/lfh.png" class="image fit thumb"><img src="images/recent-works/lfh.png" alt="" /></a>
+								<h3><a href="https://www.figma.com/proto/9EWjE7U1jcdDEzC4qeKfd3/Lending-Hand-Foundation?node-id=1%3A3&scaling=min-zoom">Lending Hand Foundation (NDA) | Web Design </a></h3>
+								<p>Designed eCommerce website in high-resolution format for a non-profit organization. Project viewable via Figma only.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -75,11 +76,11 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						<!-- <ul class="actions">
+							<li><a href="#" class="button">Full Portfolio</a></li> 
+						</ul>-->
 					</section>
 				
 				<!-- Three 
@@ -438,7 +439,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</section>
 				-->
-
 			</div>
 
 		<!-- Footer -->
