Updated side image.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<center><h2>About Me</h2></center>
+							<h2><center>About Me</center></h2>
 						</header>
-						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. I am currently working with Hack for LA as a Front-end Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team.
+						<p>My name is Alyssa Benipayo. I graduated as a Dual Major in Accounting and Computer Information Systems from California State University, Los Angeles. I am currently working with Hack for LA as a Front-end Developer where I strengthen my skills while creating an impact in the community with the projects completed. I am also a self-learner who is available to work in a team. Feel free to view my recent work below.
 						</br>
 						</br>
-						Feel free to view my recent work below. If you would like to reach out, please click on the contact links.
+						If you would like to reach out, please click on the contact links.
 						</br>
 						</br>	
 						Thank you!</p>
@@ -45,12 +45,12 @@
 
 				<!-- Two -->
 					<section id="two">
-						<center><h2>Recent Work</h2></center>
+						<h2><center>Recent Work</center></h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/recent-works/most-of-gh.PNG" class="image fit thumb"><img src="images/recent-works/most-of-gh.PNG" alt="" /></a>
 								<h3><a href="https://www.hackforla.org/guide-pages/github-issues" > Hack for LA | Get The Most Out of GitHub</a></h3>
-								<p>Currently redeveloping Hack for LA's guide page from scratch to resolve visual issues with HTML5, SCSS, and Sass. [<a href="https://github.com/alyssabenipayo/website/blob/gh-pages/_sass/components/guide-pages/github-issue-guide.scss">Source Code</a>]</p>
+								<p>Currently redeveloping Hack for LA's guide page from scratch to resolve visual issues with HTML5, SCSS, and Sass. </p> <!-- [<a href="https://github.com/alyssabenipayo/website/blob/gh-pages/_sass/components/guide-pages/github-issue-guide.scss">Source Code</a>]</p>-->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/recent-works/lfh.png" class="image fit thumb"><img src="images/recent-works/lfh.png" alt="" /></a>
